--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/b01010110/typescript-starter#readme",
   "devDependencies": {
     "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.14",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
@@ -30,5 +31,9 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@poppinss/utils": "^5.0.0",
+    "ts-morph": "^15.1.0"
   }
 }
