--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "@adonis-dev/migration",
   "version": "0.0.0",
-  "description": "",
+  "description": "Tool for creating and editing migrations in AdonisJS.",
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "tests": "jest"
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "test": "jest",
+    "prepublishOnly": "npm run test && npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/b01010110/adonis-dev-migration.git"
+    "url": "git+https://github.com/adonisjs-dev/migration.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "adonis-dev",
+    "migration"
+  ],
+  "author": "b01010110 <b01010110b@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/b01010110/adonis-dev-migration/issues"
+    "url": "https://github.com/adonisjs-dev/migration/issues"
   },
-  "homepage": "https://github.com/b01010110/adonis-dev-migration#readme",
+  "homepage": "https://github.com/adonisjs-dev/migration#readme",
   "devDependencies": {
     "@types/jest": "^28.1.8",
     "@types/node": "^18.7.14",
@@ -29,11 +36,15 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@poppinss/utils": "^5.0.0",
-    "ts-morph": "^15.1.0"
+    "@adonis-dev/parser": "^0.0.0",
+    "@poppinss/utils": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
